--- a/components/main/index.css
+++ b/components/main/index.css
@@ -37,6 +37,11 @@
   .zmiti-main-main-ui .zmiti-bg-mask {
     z-index: 20;
     background: rgba(47, 7, 8, 0.56); }
+  .zmiti-main-main-ui .zmiti-bg.main-enter-active, .zmiti-main-main-ui .zmiti-bg.main-leave-active {
+    -webkit-transition: 0.4s;
+    transition: 0.4s; }
+  .zmiti-main-main-ui .zmiti-bg.main-enter, .zmiti-main-main-ui .zmiti-bg.main-leave-to {
+    opacity: 0; }
   .zmiti-main-main-ui .zmiti-hand-page {
     -webkit-transform-origin: center 90%;
     transform-origin: center 90%; }
@@ -67,7 +72,7 @@
     .zmiti-main-main-ui .zmiti-hand-page.active {
       -webkit-transform: rotateY(0);
       transform: rotateY(0);
-      z-index: 100; }
+      z-index: 201; }
   .zmiti-main-main-ui .zmiti-hand-bg {
     position: absolute;
     width: 750px;
@@ -92,6 +97,20 @@
     -webkit-transform: translate3d(-50%, 0, 0);
     transform: translate3d(-50%, 0, 0);
     left: 50%; }
+  .zmiti-main-main-ui .zmiti-img-desc {
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+    height: 80px;
+    width: 90%;
+    box-sizing: box-sizing; }
+    .zmiti-main-main-ui .zmiti-img-desc textarea {
+      border: none;
+      outline: none;
+      width: 100%;
+      height: 100%;
+      background: transparent;
+      font-size: 40px; }
   .zmiti-main-main-ui .zmiti-start {
     width: 160px;
     height: 60px;
@@ -117,7 +136,8 @@
     .zmiti-main-main-ui .zmiti-hand-img canvas {
       position: absolute;
       left: 5%;
-      top: 3%; }
+      top: 3%;
+      z-index: 100; }
     .zmiti-main-main-ui .zmiti-hand-img img.zmiti-img-bg {
       opacity: 0;
       height: 100%;
@@ -131,6 +151,25 @@
       top: 3%; }
       .zmiti-main-main-ui .zmiti-hand-img .zmiti-hand img {
         border-radius: 10px; }
+      .zmiti-main-main-ui .zmiti-hand-img .zmiti-hand input {
+        position: absolute;
+        opacity: 0;
+        z-index: 10;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0; }
+      .zmiti-main-main-ui .zmiti-hand-img .zmiti-hand .zmiti-upload-status {
+        background: #ababa8;
+        color: #912426;
+        font-weight: bold;
+        text-align: center; }
+        .zmiti-main-main-ui .zmiti-hand-img .zmiti-hand .zmiti-upload-status span {
+          border: 1px solid red;
+          position: absolute;
+          left: 50%;
+          -webkit-transform: translate3d(-50%, 0, 0);
+          transform: translate3d(-50%, 0, 0); }
     .zmiti-main-main-ui .zmiti-hand-img .zmiti-subtitle {
       position: absolute;
       left: 5%;
@@ -142,6 +181,18 @@
       color: #912426;
       font-size: 76px;
       font-weight: bold; }
+  .zmiti-main-main-ui .zmiti-ok {
+    position: absolute;
+    height: 60px;
+    width: 140px;
+    border-radius: 10px;
+    bottom: 20px;
+    background: #912426;
+    color: #ffe3a6;
+    text-align: center;
+    line-height: 60px;
+    left: 50%;
+    margin-left: -70px; }
   .zmiti-main-main-ui .zmiti-year {
     position: absolute;
     width: 80%;
@@ -165,6 +216,59 @@
       right: 0;
       left: auto; }
 
+.load-3 {
+  margin-top: 50%;
+  padding-bottom: 20px; }
+
+.k-line2 {
+  display: inline-block;
+  background: #666;
+  height: 10px;
+  width: 10px;
+  opacity: 0;
+  border-radius: 50%;
+  transform: translateX(-300px);
+  background-color: #912426; }
+
+.k-line12-1 {
+  animation: k-loadingS 3s infinite;
+  animation-delay: 0.8s; }
+
+.k-line12-2 {
+  animation: k-loadingS 3s infinite;
+  animation-delay: 0.7s; }
+
+.k-line12-3 {
+  animation: k-loadingS 3s infinite;
+  animation-delay: 0.6s; }
+
+.k-line12-4 {
+  animation: k-loadingS 3s infinite;
+  animation-delay: 0.5s; }
+
+.k-line12-5 {
+  animation: k-loadingS 3s infinite;
+  animation-delay: 0.4s; }
+
+.k-line12-6 {
+  animation: k-loadingS 3s infinite;
+  animation-delay: 0.3s; }
+
+.k-line12-7 {
+  animation: k-loadingS 3s infinite;
+  animation-delay: 0.2s; }
+
+.k-line12-8 {
+  animation: k-loadingS 3s infinite;
+  animation-delay: 0.1s; }
+
+@keyframes k-loadingS {
+  40% {
+    transform: translateX(0);
+    opacity: 0.8; }
+  100% {
+    transform: translateX(300px);
+    opacity: 0; } }
 @media all and (min-width: 750px) and (min-height: 1440px) {
   .zmiti-main-main-ui .zmiti-hand-img {
     height: 74vh;
