--- a/components/share/index.scss
+++ b/components/share/index.scss
@@ -32,14 +32,12 @@ $color:#ca141f;
 		box-sizing: border-box;
 		@include pos(a);
 		z-index: 10;
-		height: 80/.84vh;
 		//left: 50%;
 		@include transform(scale(.82));
 		@include transformOrigin(center 10vh);
 		//border: 1px solid #000;
 
 		img {
-			@include transform(scale(.95, .97));
 			width: auto;
 			height: 100%;
 		}
@@ -52,14 +50,25 @@ $color:#ca141f;
 			@include transform(scale(1));
 		}
 
+		&:before{
+			content:"";
+			@include pos(a);
+			width: 100%;
+			height: 100%;
+			left: 0;
+			top: 0;
+			box-shadow:0 0 0 6px $color, 10px 10px 0 6px rgba(178,174,168,1);
+			z-index: -1;
+		}
+
 		&:after {
 			content: '长按保存图片';
 			@include pos(a);
-			color: $color;
+			color: #333;
 			font-size: .4rem;
-			bottom: .4rem;
+			bottom: 0rem;
 			width: .4rem;
-			left: 98%;
+			left: 102%;
 
 		}
 
@@ -165,6 +174,86 @@ $color:#ca141f;
 			}
 		}
 	}
+
+
+
+	.zmiti-share-content{
+
+	
+		&>div{
+			width:100%;
+			@include displayBox(vertical);
+			height: 96%;
+			
+			margin-top: 2%;
+		}
+
+		.zmiti-text{
+			width: 90%;
+		}
+		.zmiti-hand-compare{
+			@include displayBox(horizontal);
+			@include pos(r);
+			width: 90%;
+			margin: 70px auto;
+			&>div{
+				width: 50%;
+				@include pos(r);
+			}
+
+			.zmiti-brage{
+				@include pos(a);
+
+				left: 50%;
+				@include transform(translate3d(-50%,0,0));
+				width: 200px;
+				bottom: 20px;
+			}
+
+			.zmiti-job,.zmiti-upload-hand{
+				@include pos(a);
+				bottom: 30px;
+				left: 3%;
+				color:#912426;
+				span{
+					font-weight: bold;
+				}
+			}
+			.zmiti-upload-hand{
+				right: 6%;
+				left: auto;
+			}
+
+
+			.zmiti-other-hand,.zmiti-myhand{
+				@include pos(a);
+				width: 90%;
+				left: 3%;
+				top: 5%;
+				height: 80%;
+			}
+		}
+
+
+		.zmiti-qrcode{
+			width: 200px;
+			margin: 0 auto;
+		}
+
+		.zmiti-logo{
+			@include pos(a);
+			width: 200px;
+			font-size: 22px;
+			text-align: center;
+			right: 0;
+			bottom: 120px;
+			img{
+				margin: 0 auto;
+				width: 50px;
+				display: block;
+			}
+		}
+	}
  	
 
  	.zmiti-share-btns{
@@ -178,6 +267,25 @@ $color:#ca141f;
 		@include displayBox(horizontal);
 		-webkit-box-pack:justify;
 		-webkit-box-align:start;
+
+		.zmiti-share-btn{
+			@include pos(r);
+			border:1px solid red;
+			width: 230px;
+
+			span{
+				@include pos(a);
+				width: 100%;
+				height: 100%;
+				left: 0;
+				top: 0;
+				z-index: 10;
+				line-height: 2.2;
+
+			}
+			background: transparent;
+			border:none;
+		}
 
 		&.restart{
 			-webkit-box-pack:center
