--- a/components/index/index.css
+++ b/components/index/index.css
@@ -35,20 +35,153 @@
   margin-left: -375px;
   background: #f1ebcb;
   opacity: 0;
-  z-index: -1; }
+  z-index: 10;
+  -webkit-transition: 1s;
+  transition: 1s; }
   .zmiti-index-main-ui.show {
-    opacity: 1;
-    z-index: 10; }
-  .zmiti-index-main-ui .zmiti-title {
-    margin-top: 10vh;
+    opacity: 1; }
+  .zmiti-index-main-ui .zmiti-bg.main-enter-active, .zmiti-index-main-ui .zmiti-bg.main-leave-active {
+    -webkit-transition: 1s;
+    transition: 1s; }
+  .zmiti-index-main-ui .zmiti-bg.main-enter, .zmiti-index-main-ui .zmiti-bg.main-leave-to {
     opacity: 0; }
-  .zmiti-index-main-ui .zmiti-index {
-    margin-top: 5vh; }
-  .zmiti-index-main-ui .zmiti-canvas {
-    box-sizing: border-box;
+  .zmiti-index-main-ui .zmiti-hand-page {
+    -webkit-transform-origin: center 90%;
+    transform-origin: center 90%; }
+    .zmiti-index-main-ui .zmiti-hand-page.hand-enter-active, .zmiti-index-main-ui .zmiti-hand-page.hand-leave-active {
+      -webkit-transition: 1s 0.5s;
+      transition: 1s 0.5s; }
+    .zmiti-index-main-ui .zmiti-hand-page.hand-enter, .zmiti-index-main-ui .zmiti-hand-page.hand-leave-to {
+      opacity: 0; }
+    .zmiti-index-main-ui .zmiti-hand-page.left {
+      opacity: 1;
+      -webkit-transform: translate3d(-5.66667rem, 0, 0) scale(0.3);
+      transform: translate3d(-5.66667rem, 0, 0) scale(0.3);
+      z-index: 200; }
+    .zmiti-index-main-ui .zmiti-hand-page.transition {
+      -webkit-transition: -webkit-transform 0.5s;
+      transition: transform 0.5s; }
+    .zmiti-index-main-ui .zmiti-hand-page.transition1 {
+      -webkit-transition: -webkit-transform 0.3s 0.1s;
+      transition: transform 0.3s 0.1s; }
+    .zmiti-index-main-ui .zmiti-hand-page.left1 {
+      z-index: -1;
+      -webkit-transform: translate3d(-750px, 0, 0) scale(0.3);
+      transform: translate3d(-750px, 0, 0) scale(0.3); }
+    .zmiti-index-main-ui .zmiti-hand-page.right {
+      opacity: 1;
+      -webkit-transform: translate3d(5.66667rem, 0, 0) scale(0.3);
+      transform: translate3d(5.66667rem, 0, 0) scale(0.3);
+      z-index: 200; }
+    .zmiti-index-main-ui .zmiti-hand-page.right1 {
+      z-index: -1;
+      -webkit-transform: translate3d(750px, 0, 0) scale(0.3);
+      transform: translate3d(750px, 0, 0) scale(0.3); }
+    .zmiti-index-main-ui .zmiti-hand-page.active {
+      -webkit-transform: rotateY(0);
+      transform: rotateY(0);
+      z-index: 201; }
+  .zmiti-index-main-ui .zmiti-hand-img {
     position: absolute;
-    top: 10vh;
-    left: 0; }
+    z-index: 10;
+    height: 90%;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
+    left: 50%;
+    top: 2vh;
+    z-index: 22; }
+    .zmiti-index-main-ui .zmiti-hand-img canvas {
+      position: absolute;
+      left: 5%;
+      top: 3%;
+      z-index: 100; }
+    .zmiti-index-main-ui .zmiti-hand-img img.zmiti-img-bg {
+      opacity: 0;
+      height: 100%;
+      width: auto; }
+    .zmiti-index-main-ui .zmiti-hand-img .zmiti-hand {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 90%;
+      left: 5%;
+      top: 3%; }
+      .zmiti-index-main-ui .zmiti-hand-img .zmiti-hand img {
+        border-radius: 10px; }
+      .zmiti-index-main-ui .zmiti-hand-img .zmiti-hand input {
+        position: absolute;
+        opacity: 0;
+        z-index: 10;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0; }
+      .zmiti-index-main-ui .zmiti-hand-img .zmiti-hand .zmiti-upload-status {
+        background: #ababa8;
+        color: #912426;
+        font-weight: bold;
+        text-align: center; }
+        .zmiti-index-main-ui .zmiti-hand-img .zmiti-hand .zmiti-upload-status span {
+          border: 1px solid red;
+          position: absolute;
+          left: 50%;
+          -webkit-transform: translate3d(-50%, 0, 0);
+          transform: translate3d(-50%, 0, 0); }
+    .zmiti-index-main-ui .zmiti-hand-img .zmiti-subtitle {
+      position: absolute;
+      left: 5%;
+      bottom: 3%; }
+    .zmiti-index-main-ui .zmiti-hand-img .zmiti-name {
+      position: absolute;
+      bottom: 40px;
+      right: 5%;
+      color: #912426;
+      font-weight: bold; }
+      .zmiti-index-main-ui .zmiti-hand-img .zmiti-name span {
+        font-size: 60px; }
+  .zmiti-index-main-ui .zmiti-hand-bg {
+    position: absolute;
+    width: 750px;
+    left: 0;
+    top: 0;
+    height: 100vh; }
+    .zmiti-index-main-ui .zmiti-hand-bg:before {
+      content: '';
+      display: none;
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: 10;
+      width: 100%;
+      height: 100%;
+      background: rgba(47, 7, 8, 0.56); }
+  .zmiti-index-main-ui .zmiti-title {
+    position: absolute;
+    top: 2%;
+    width: 90%;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
+    left: 50%; }
+  .zmiti-index-main-ui .zmiti-start {
+    width: 240px;
+    height: 60px;
+    line-height: 60px;
+    border-radius: 10px;
+    text-align: center;
+    color: #ffe3a6;
+    position: absolute;
+    bottom: 6%;
+    left: 50%;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0); }
+    .zmiti-index-main-ui .zmiti-start span {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      line-height: 2.1;
+      font-size: 36px; }
 
 @-webkit-keyframes rotate1 {
   to {
@@ -93,5 +226,10 @@
       color: #fff;
       font-family: Georgia;
       font-size: .7rem; }
+
+@media all and (min-width: 750px) and (min-height: 1440px) {
+  .zmiti-index-main-ui .zmiti-hand-img {
+    height: 74vh;
+    top: 12vh; } }
 
 /*# sourceMappingURL=index.css.map */
